log
Fri 06 Oct 2023 09:11:04 PM UTC: 
 tests:  0|5
total_score: 0/70
d8451bc
Sat 07 Oct 2023 12:08:25 AM UTC: 
 sudoku.c | 57 ++++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 42 insertions(+), 15 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:20: error: expected expression before ‘List’
   75 |           pushBack(List, nodo_adj);
      |                    ^~~~
sudoku.c:75:11: error: too few arguments to function ‘pushBack’
   75 |           pushBack(List, nodo_adj);
      |           ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
In file included from test.c:5:
sudoku.c:77:16: error: expected expression before ‘List’
   77 |         return List;
      |                ^~~~
Compilation failed
8e429b1
Sat 07 Oct 2023 12:08:45 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
c26317a
Sat 07 Oct 2023 12:11:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
585cd38
Sat 07 Oct 2023 12:11:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8fac1ee
Sat 07 Oct 2023 12:11:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bf43e6a
Sat 07 Oct 2023 12:11:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
95ad224
